[package]
name = "road-runner"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1"
actix-web = "4.0.0-beta.19"
matchit = "0.4.3"
anyhow = "1.0.38"
futures = "0.3.19"

[dependencies.neon]
version = "0.9"
default-features = false
features = ["napi-6" , "channel-api"]

